# codegen-utils

./: .gitignore  Cargo.toml  README.md
arena-traits/: Cargo.toml
arena-traits/src/: lib.rs
ast-traits/: Cargo.toml
cfg-traits/: Cargo.toml
cfg-traits/src/: lib.rs
crates/ast-traits/src/: lib.rs
crates/cfg-traits/: Cargo.toml
crates/cfg-traits/src/: lib.rs  util.rs
crates/onion/src/: lib.rs
crates/register-machine-traits/: Cargo.toml
crates/register-machine-traits/src/: lib.rs
crates/sift-trait/: Cargo.toml
crates/sift-trait/src/: lib.rs
crates/siftify/src/: lib.rs
crates/ssa-canon/: Cargo.toml
crates/ssa-canon/src/: lib.rs
crates/ssa-cc/src/: lib.rs
crates/ssa-impls/src/: cfg.rs  dom.rs  lib.rs  maxssa.rs  reducify.rs
crates/ssa-pliron-compat/: Cargo.toml
crates/ssa-pliron-compat/src/: lib.rs  to_ssa_traits.rs
crates/ssa-reloop/: Cargo.toml
crates/ssa-reloop/src/: lib.rs
crates/ssa-reloop2/: Cargo.toml
crates/ssa-reloop2/src/: lib.rs
crates/ssa-rust/src/: lib.rs
crates/ssa-trace/: Cargo.toml
crates/ssa-trace/src/: lib.rs
crates/ssa-traits/: Cargo.toml
crates/ssa-traits/src/: lib.rs  op.rs
crates/ssa-translation/: Cargo.toml
crates/ssa-translation/src/: ai.rs  lib.rs
crates/tac-traits/: Cargo.toml
crates/tac-traits/src/: lib.rs
manip-util/: Cargo.toml
onion/: Cargo.toml
onion/src/: lib.rs
register-machine-traits/: Cargo.toml
sift-trait/: Cargo.toml
sift-trait/src/: lib.rs
siftify/: Cargo.toml
ssa-canon/: Cargo.toml
ssa-canon/src/: lib.rs
ssa-cc/: Cargo.toml
ssa-cc/src/: lib.rs
ssa-impls/: Cargo.toml
ssa-impls/src/: cfg.rs  dom.rs  lib.rs  maxssa.rs  reducify.rs
ssa-pliron-compat/: Cargo.toml
ssa-pliron-compat/src/: lib.rs
ssa-reloop/: Cargo.toml
ssa-reloop/src/: lib.rs
ssa-rust/: Cargo.toml
ssa-rust/src/: lib.rs
ssa-trace/: Cargo.toml
ssa-traits/: Cargo.toml
ssa-traits/src/: lib.rs  op.rs
ssa-translation/: Cargo.toml
ssa-translation/src/: ai.rs  lib.rs
tac-traits/: Cargo.toml
tac-traits/src/: lib.rs
