[workspace]
members=["ssa-traits", "ssa-impls",  "ssa-translation", "ssa-reloop", "ssa-cc", "ssa-canon","ssa-rust", "cfg-traits", "register-machine-traits", "tac-traits"] # , "ssa-trace"
resolver="2"

[workspace.dependencies]


id-arena = "2.2.1"

cfg-traits-02 = {package="cfg-traits",version="^0.2.3"}
ssa-traits-02 = {package="ssa-traits",version="^0.2.3"}
tac-traits-02 = {package="tac-traits",version="^0.2.3"}