[workspace]
members = [
    "crates/ssa-traits",
    "crates/ssa-impls",
    "crates/ssa-translation",
    "crates/ssa-reloop",
    "crates/ssa-cc",
    "crates/ssa-canon",
    "crates/ssa-rust",
    "crates/cfg-traits",
    "crates/register-machine-traits",
    "crates/tac-traits",
] # , "ssa-trace"
resolver = "2"

[workspace.dependencies]


id-arena = "2.2.1"

cfg-traits-02 = { package = "cfg-traits", version = "^0.2.3" }
ssa-traits-02 = { package = "ssa-traits", version = "^0.2.3" }
tac-traits-02 = { package = "tac-traits", version = "^0.2.3" }
