[package]
name = "arena-traits"
version = "0.2.2"
edition = "2021"
license = "CC0-1.0"
description = "Traits for arenas"

[dependencies]
id-arena = { workspace = true, optional = true }
portal-solutions-id-arena = { version = "2.2.2", default-features = false, optional = true }

[features]
id-arena = ["dep:id-arena"]
portal-solutions-id-arena = ["dep:portal-solutions-id-arena"]
