[package]
name = "register-machine-traits"
version = "0.3.0-alpha.0"
edition = "2021"
license = "CC0-1.0"
description = "Traits for register machines"

[dependencies]
arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
