[package]
name = "ssa-canon"
version = "0.2.0"
edition = "2021"
license = "CC0-1.0"
description = "Simple SSA IR"

[dependencies]
anyhow = "1.0.86"
arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits", features = ["id-arena"] }
cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
id-arena.workspace = true
sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
