[package]
name = "ssa-cc"
version = "0.1.4"
edition = "2021"
license = "CC0-1.0"
description = "Traits for compiling SSA IR to C"

[dependencies]
anyhow = "1.0.86"
arena-traits = { version = "0.1.0", path = "../arena-traits" }
either = "1.13.0"
id-arena = { workspace = true, optional = true }

ssa-canon = { version = "0.1.0", path = "../ssa-canon", optional = true }

ssa-traits = { version = "0.1.0", path = "../ssa-traits" }

[features]
ssa-canon = ["dep:ssa-canon","id-arena"]
id-arena = ["dep:id-arena","arena-traits/id-arena"]
