[package]
name = "ssa-cc"
version = "0.3.0-alpha.2"
edition = "2021"
license = "CC0-1.0"
description = "Traits for compiling SSA IR to C"

[dependencies]
anyhow = "1.0.86"
cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
arena-traits = { version = "0.2.3", features = ["id-arena"] }
either = "1.13.0"
id-arena = { workspace = true, optional = true }
lending-iterator = "0.1.7"

ssa-canon = { version = "0.3.0-alpha.0", path = "../ssa-canon", optional = true }

ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }

[features]
ssa-canon = ["dep:ssa-canon","id-arena"]
id-arena = ["dep:id-arena","arena-traits/id-arena"]
