[package]
name = "ssa-impls"
version = "0.2.1"
edition = "2021"
license = "CC0-1.0"
description = "Implementation of common SSA algorithms"

[dependencies]
arena-traits = { version = "0.2.0-alpha.0", path = "../arena-traits" }
cfg-traits = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
ssa-traits = { version = "0.2.0-alpha.0", path = "../ssa-traits" }
