[package]
name = "ssa-impls"
version = "0.3.0-alpha.2"
edition = "2021"
license = "CC0-1.0"
description = "Implementation of common SSA algorithms"

[dependencies]

cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }

lending-iterator = "0.1.7"
arena-traits = { version = "0.2.3" }

