[package]
name = "ssa-reloop"
version = "0.3.0-alpha.1"
edition = "2021"
license = "CC0-1.0"
description = "Relooper tool for SSA IR"

[dependencies]
arena-traits = { version = "0.2.2", path = "../arena-traits" }
cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
lending-iterator = "0.1.7"
relooper = "0.1.0"
ssa-impls = { version = "0.3.0-alpha.0", path = "../ssa-impls" }
ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
