[package]
name = "ssa-reloop"
version = "0.3.0-alpha.2"
edition = "2021"
license = "CC0-1.0"
description = "Relooper tool for SSA IR"

[dependencies]

cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
lending-iterator = "0.1.7"
arena-traits = { version = "0.2.3" }

relooper = "0.1.0"
ssa-impls = { version = "0.3.0-alpha.0", path = "../ssa-impls" }
ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
