[package]
name = "ssa-traits"
version = "0.3.0-alpha.1"
edition = "2021"
license = "CC0-1.0"
description = "Traits for SSA IR"

[dependencies]
anyhow = {version="1.0",default-features=false}

cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
arena-traits = { version = "0.2.3" }

either = {version="1.13.0",default-features=false}
lending-iterator = "0.1.7"

[features]
std = ["anyhow/std"]
