[package]
name = "tac-traits"
version = "0.3.0-alpha.0"
edition = "2021"
license = "CC0-1.0"
description = "Traits for Three Address Code"

[dependencies]

cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }
register-machine-traits = { version = "0.3.0-alpha.0", path = "../register-machine-traits" }
arena-traits = { version = "0.2.3" }

sift-trait = { version = "0.2.0-alpha.0", path = "../sift-trait" }
