[package]
name = "ssa-canon"
version = "0.3.0-alpha.2"
edition = "2021"
license = "CC0-1.0"
description = "Simple SSA IR"

[dependencies]
anyhow = "1.0.86"
ssa-traits = { version = "0.3.0-alpha.0", path = "../ssa-traits" }
cfg-traits = { version = "0.3.0-alpha.0", path = "../cfg-traits" }

arena-traits = { version = "0.2.3", features = ["id-arena"] }

id-arena.workspace = true
lending-iterator = "0.1.7"
sift-trait = { version = "0.3.0"}

