[package]
name = "ssa-reloop2"
version = "0.2.3"
edition = "2021"
license = "CC0-1.0"
description = "Stackifier-based structured control flow for CFG IRs"

[dependencies]
arena-traits = { version = "0.2.3" }
cfg-traits   = { version = "0.2.0-alpha.0", path = "../cfg-traits" }
ssa-impls    = { version = "0.2.0-alpha.0", path = "../ssa-impls" }
